<resources>
    <string name="app_name">GRA Ghana</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="mission">The mission of GRA is to mobilize revenue for national development in a transparent, fair, effective and efficient manner.</string>
    <string name="forms">Forms</string>
    <string name="legal_resources">Legal Resources</string>
    <string name="publications">Publications</string>
    <string name="location">Location</string>
    <string name="contact_us">Contact Us</string>
    <string name="verify_tin">Verify TIN</string>
    <string name="lost_tins">Lost TINs</string>
    <string name="get_a_tin">Get a TIN</string>
    <string name="more">More...</string>
</resources>
