<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_forms"
            android:icon="@drawable/ic_forms"
            android:title="@string/forms" />

        <item
            android:id="@+id/nav_legal"
            android:icon="@drawable/ic_legal"
            android:title="@string/legal_resources" />

        <item
            android:id="@+id/nav_publications"
            android:icon="@drawable/ic_publications"
            android:title="@string/publications" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/location" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
